--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -11,7 +11,14 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"nodemon": "^3.1.10",
 		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"@types/express": "^5.0.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.5.0",
+		"express": "^5.1.0"
 	}
 }
