feat(us)/setup redis & object store connections

--- a/services/upload-service/.env.template
+++ b/services/upload-service/.env.template
@@ -1,1 +1,13 @@
 PORT=8081
+
+REDIS_CON_URL=redis://:redis@localhost:9002
+
+OBJECT_STORE_REGION=minio #Unused for minio
+OBJECT_STORE_ENDPOINT=http://localhost:9000
+OBJECT_STORE_KEY_ID=minioadmin
+OBJECT_STORE_SECRET=minioadmin123
+
+OBJECT_STORE_PRIVATE_BUCKET=uploads
+
+# Used to serve the videos to the end users (not striclty required in the upload service)
+OBJECT_STORE_PUBLIC_BUCKET=cdn
