--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -16,9 +16,11 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.837.0",
 		"@types/express": "^5.0.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
-		"express": "^5.1.0"
+		"express": "^5.1.0",
+		"ioredis": "^5.6.1"
 	}
 }
