--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/cors": "^2.8.19",
+		"@types/multer": "^1.4.13",
 		"nodemon": "^3.1.10",
 		"typescript": "^5.8.3"
 	},
@@ -22,6 +23,7 @@
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"ioredis": "^5.6.1",
+		"multer": "^2.0.1",
 		"zod": "^3.25.67"
 	}
 }
