--- a/services/upload-service/.env.template
+++ b/services/upload-service/.env.template
@@ -2,6 +2,8 @@ PORT=8081
 
 REDIS_CON_URL=redis://:redis@localhost:9002
 
+POSTGRESQL_CON_URL=postgres://postgres:postgres@localhost:5431/core-cast
+
 OBJECT_STORE_REGION=minio #Unused for minio
 OBJECT_STORE_ENDPOINT=http://localhost:9000
 OBJECT_STORE_KEY_ID=minioadmin
