--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -14,10 +14,12 @@
 		"@types/cors": "^2.8.19",
 		"@types/multer": "^1.4.13",
 		"nodemon": "^3.1.10",
+		"prisma": "6.10.1",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.837.0",
+		"@prisma/client": "6.10.1",
 		"@types/express": "^5.0.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
