--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -26,6 +26,8 @@
 		"express": "^5.1.0",
 		"ioredis": "^5.6.1",
 		"multer": "^2.0.1",
+		"pino": "^9.7.0",
+		"pino-pretty": "^13.0.0",
 		"zod": "^3.25.67"
 	}
 }
