feat(us)/setup prom client for metrics collection

--- a/compose.yml
+++ b/compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - ./pg-data:/var/lib/postgresql/data
 
-  # Dev tools
+  # OPTIONAL: Explorer for postgreSQL
   adminer:
     image: adminer
     restart: always
