feat(us)/ setup rabbitMQ

--- a/services/upload-service/.env.template
+++ b/services/upload-service/.env.template
@@ -14,3 +14,5 @@ OBJECT_STORE_PRIVATE_BUCKET=uploads
 
 # Used to serve the videos to the end users (not striclty required in the upload service)
 OBJECT_STORE_PUBLIC_BUCKET=cdn
+
+RABBITMQ_CON_URL='amqp://localhost'
