--- a/compose.yml
+++ b/compose.yml
@@ -32,10 +32,15 @@ services:
     volumes:
       - ./pg-data:/var/lib/postgresql/data
 
+  rabbit-mq:
+    image: rabbitmq:4-management
+    ports:
+      - 5672:5672   # Do NOT expose without authenticatiuon properly configured
+      - 15672:15672 # Do NOT expose (.)
+
   # OPTIONAL: Explorer for postgreSQL
   adminer:
     image: adminer
-    restart: always
     ports:
       - 9090:8080
     networks:
