--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/amqplib": "^0.10.7",
 		"@types/cors": "^2.8.19",
 		"@types/multer": "^1.4.13",
 		"nodemon": "^3.1.10",
@@ -21,6 +22,7 @@
 		"@aws-sdk/client-s3": "^3.837.0",
 		"@prisma/client": "6.10.1",
 		"@types/express": "^5.0.3",
+		"amqplib": "^0.10.8",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
