--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-	"dependencies": {
-		"amqplib": "^0.10.8",
-		"dotenv": "^17.0.0",
-		"pino": "^9.7.0"
-	},
-	"devDependencies": {
-		"@types/amqplib": "^0.10.7"
-	}
+  "name": "core-cast",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
