--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -11,9 +11,13 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/node": "^24.0.8",
 		"nodemon": "^3.1.10"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.840.0",
+		"dotenv": "^17.0.0",
+		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
 		"typescript": "^5.8.3"
 	}
