--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "core-cast",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "core-cast",
+	"version": "1.0.0",
+	"private": true,
+	"workspaces": [
+		"services/*",
+		"shared/*"
+	]
 }
