--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -16,6 +16,8 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.840.0",
+		"@types/amqplib": "^0.10.7",
+		"amqplib": "^0.10.8",
 		"dotenv": "^17.0.0",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
