--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -19,8 +19,9 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@core-cast/prisma": "1.0.0",
+
 		"@aws-sdk/client-s3": "^3.837.0",
-		"@prisma/client": "6.10.1",
 		"@types/express": "^5.0.3",
 		"amqplib": "^0.10.8",
 		"cors": "^2.8.5",
