feat(us)/decouple object store

--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
 	"name": "core-cast",
 	"version": "1.0.0",
-	"private": true,
-	"workspaces": [
-		"services/*",
-		"shared/*"
-	]
+	"private": true
 }
