--- a/services/upload-service/.env.template
+++ b/services/upload-service/.env.template
@@ -10,9 +10,7 @@ OBJECT_STORE_ENDPOINT=http://localhost:9000
 OBJECT_STORE_KEY_ID=minioadmin
 OBJECT_STORE_SECRET=minioadmin123
 
-OBJECT_STORE_PRIVATE_BUCKET=uploads
-
-# Used to serve the videos to the end users (not striclty required in the upload service)
-OBJECT_STORE_PUBLIC_BUCKET=cdn
+OBJECT_STORE_PRIVATE_BUCKET=uploads # Used to upload and process videos
+OBJECT_STORE_PUBLIC_BUCKET=cdn # Used to serve videos & screenshots to the end users
 
 RABBITMQ_CON_URL='amqp://localhost'
