--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -11,9 +11,9 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/amqplib": "^0.10.7",
 		"@types/cors": "^2.8.19",
 		"@types/multer": "^1.4.13",
+		"@types/express": "^5.0.3",
 		"nodemon": "^3.1.10",
 		"prisma": "6.10.1",
 		"typescript": "^5.8.3"
@@ -21,10 +21,8 @@
 	"dependencies": {
 		"@core-cast/prisma": "1.0.0",
 		"@core-cast/object-store": "1.0.0",
-
+		"@core-cast/rabbitmq": "1.0.0",
 		"@aws-sdk/client-s3": "^3.837.0",
-		"@types/express": "^5.0.3",
-		"amqplib": "^0.10.8",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
