feat(ts)/prepare setup for video processing task execution

--- a/services/transcoding-service/.env.template
+++ b/services/transcoding-service/.env.template
@@ -1,5 +1,7 @@
 LOGS_DIR="" # Optional, by default it will store logs in ./logs
 
+POSTGRESQL_CON_URL=postgres://postgres:postgres@localhost:5431/core-cast
+
 OBJECT_STORE_REGION=minio #Unused for minio
 OBJECT_STORE_ENDPOINT=http://localhost:9000
 OBJECT_STORE_KEY_ID=minioadmin
