--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -18,6 +18,7 @@
 		"@core-cast/object-store": "1.0.0",
 		"@core-cast/rabbitmq": "1.0.0",
 		"@core-cast/prisma": "1.0.0",
+		"@core-cast/types": "1.0.0",
 		"@aws-sdk/client-s3": "^3.840.0",
 		"dotenv": "^17.0.0",
 		"pino": "^9.7.0",
