feat(ts)/ thumbnail extraction function v1

--- a/services/transcoding-service/.env.template
+++ b/services/transcoding-service/.env.template
@@ -1,4 +1,5 @@
 LOGS_DIR="" # Optional, by default it will store logs in ./logs
+TEMP_DIR="" #Optional, used for ffmpeg results
 
 POSTGRESQL_CON_URL=postgres://postgres:postgres@localhost:5431/core-cast
 
@@ -13,3 +14,4 @@ OBJECT_STORE_PUBLIC_BUCKET=cdn
 RABBITMQ_CON_URL='amqp://localhost'
 
 MAX_CONCURRENT_TASKS=2
+
