--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -11,16 +11,20 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/node": "^24.0.8",
 		"nodemon": "^3.1.10"
 	},
 	"dependencies": {
-		"@core-cast/object-store": "1.0.0",
-		"@core-cast/rabbitmq": "1.0.0",
-		"@core-cast/prisma": "1.0.0",
-		"@core-cast/types": "1.0.0",
 		"@aws-sdk/client-s3": "^3.840.0",
+		"@aws-sdk/s3-request-presigner": "^3.842.0",
+		"@core-cast/object-store": "1.0.0",
+		"@core-cast/prisma": "1.0.0",
+		"@core-cast/rabbitmq": "1.0.0",
+		"@core-cast/types": "1.0.0",
+		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"dotenv": "^17.0.0",
+		"fluent-ffmpeg": "^2.1.3",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
 		"typescript": "^5.8.3"
