feat(ts)/implement prometheus metrcis and server

--- a/services/transcoding-service/.env.template
+++ b/services/transcoding-service/.env.template
@@ -3,6 +3,8 @@ TEMP_DIR="" #Optional, used for ffmpeg results
 
 POSTGRESQL_CON_URL=postgres://postgres:postgres@localhost:5431/core-cast
 
+PROMETHEUS_SERVER_PORT=8082 # HTTP server used to serve prometheus metrics
+
 OBJECT_STORE_REGION=minio #Unused for minio
 OBJECT_STORE_ENDPOINT=http://localhost:9000
 OBJECT_STORE_KEY_ID=minioadmin
