--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^5.0.3",
 		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/node": "^24.0.8",
 		"nodemon": "^3.1.10"
@@ -24,9 +25,11 @@
 		"@core-cast/types": "1.0.0",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"dotenv": "^17.0.0",
+		"express": "^5.1.0",
 		"fluent-ffmpeg": "^2.1.3",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
+		"prom-client": "^15.1.3",
 		"typescript": "^5.8.3"
 	}
 }
