--- a/shared/object-store/package.json
+++ b/shared/object-store/package.json
@@ -1,15 +1,22 @@
 {
 	"name": "@core-cast/object-store",
 	"version": "1.0.0",
-	"main": "index.ts",
-	"types": "index.d.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"build": "tsc"
+	},
 	"exports": {
 		".": {
-			"require": "./index.ts",
-			"import": "./index.ts"
+			"require": "./dist/index.js",
+			"import": "./dist/index.js"
 		}
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.840.0"
+	},
+	"devDependencies": {
+		"typescript": "^5.8.3",
+		"@types/node": "^24.0.8"
 	}
 }
