--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -5,25 +5,28 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon"
+		"dev": "nodemon",
+		"build": "rimraf ./dist && tsc",
+		"start": "pnpm run build && node dist/app.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
 		"@types/cors": "^2.8.19",
-		"@types/multer": "^1.4.13",
 		"@types/express": "^5.0.3",
+		"@types/multer": "^1.4.13",
 		"nodemon": "^3.1.10",
 		"prisma": "6.10.1",
+		"rimraf": "^6.0.1",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@core-cast/prisma": "1.0.0",
+		"@aws-sdk/client-s3": "^3.837.0",
 		"@core-cast/object-store": "1.0.0",
+		"@core-cast/prisma": "1.0.0",
 		"@core-cast/rabbitmq": "1.0.0",
 		"@core-cast/types": "1.0.0",
-		"@aws-sdk/client-s3": "^3.837.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
