feat(ts)/add build script

--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon"
+		"dev": "nodemon",
+		"build": "rimraf ./dist && tsc",
+		"start": "pnpm run build && node dist/app.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,7 +16,8 @@
 		"@types/express": "^5.0.3",
 		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/node": "^24.0.8",
-		"nodemon": "^3.1.10"
+		"nodemon": "^3.1.10",
+		"rimraf": "^6.0.1"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.840.0",
