--- a/shared/prisma/package.json
+++ b/shared/prisma/package.json
@@ -5,7 +5,7 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"copy-generated": "cpx \"generated/prisma/**/*\" dist/generated/prisma",
-		"build": "rimraf ./dist && tsc && pnpm copy-generated"
+		"build": "rimraf ./dist && pnpm tsc && pnpm copy-generated"
 	},
 	"exports": {
 		".": {
