--- a/shared/rabbitmq/package.json
+++ b/shared/rabbitmq/package.json
@@ -13,7 +13,8 @@
 		}
 	},
 	"dependencies": {
-		"amqplib": "^0.10.8"
+		"amqplib": "^0.10.8",
+		"typescript": "^5.8.3"
 	},
 	"devDependencies": {
 		"@types/amqplib": "^0.10.7"
