--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -20,12 +20,15 @@
 	},
 	"dependencies": {
 		"@core-cast/prisma": "workspace:*",
+		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.19",
+		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
-		"rimraf": "^6.0.1"
+		"rimraf": "^6.0.1",
+		"zod": "^3.25.76"
 	}
 }
