--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -26,6 +26,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
+		"ioredis": "^5.6.1",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
 		"rimraf": "^6.0.1",
