feat(cs)/add session cookie on register

--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -21,8 +21,10 @@
 	"dependencies": {
 		"@core-cast/prisma": "workspace:*",
 		"@types/bcrypt": "^5.0.2",
+		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.19",
 		"bcrypt": "^6.0.0",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
