feat(cs)/implement avatar and cover image uploading

--- a/services/core-service/.env.template
+++ b/services/core-service/.env.template
@@ -4,3 +4,11 @@ LOGS_DIR="" # Optional, by default it will store logs in ./logs
 REDIS_CON_URL=redis://:redis@localhost:9002
 
 POSTGRESQL_CON_URL=postgres://postgres:postgres@localhost:5431/core-cast
+
+OBJECT_STORE_REGION=minio #Unused for minio
+OBJECT_STORE_ENDPOINT=http://localhost:9000
+OBJECT_STORE_KEY_ID=minioadmin
+OBJECT_STORE_SECRET=minioadmin123
+
+OBJECT_STORE_PRIVATE_BUCKET=uploads # Used to upload and process videos
+OBJECT_STORE_PUBLIC_BUCKET=cdn # Used to serve videos & screenshots to the end users
