--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -19,17 +19,21 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.844.0",
+		"@core-cast/object-store": "workspace:*",
 		"@core-cast/prisma": "workspace:*",
-		"@types/bcrypt": "^5.0.2",
 		"@core-cast/types": "workspace:*",
+		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.19",
+		"@types/multer": "^1.4.13",
 		"bcrypt": "^6.0.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
 		"ioredis": "^5.6.1",
+		"multer": "^2.0.1",
 		"otplib": "^12.0.1",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
