--- a/services/upload-service/package.json
+++ b/services/upload-service/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/multer": "^1.4.13",
@@ -26,9 +27,10 @@
 		"@core-cast/object-store": "workspace:*",
 		"@core-cast/prisma": "workspace:*",
 		"@core-cast/rabbitmq": "workspace:*",
-		"@core-cast/types": "workspace:*",
-		"@core-cast/repositories": "workspace:*",
 		"@core-cast/redis": "workspace:*",
+		"@core-cast/repositories": "workspace:*",
+		"@core-cast/types": "workspace:*",
+		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
