--- a/services/transcoding-service/.env.template
+++ b/services/transcoding-service/.env.template
@@ -13,6 +13,9 @@ OBJECT_STORE_SECRET=minioadmin123
 OBJECT_STORE_PRIVATE_BUCKET=uploads
 OBJECT_STORE_PUBLIC_BUCKET=cdn
 
+MEILISEARCH_URL="http://localhost:7700"
+MEILISEARCH_APIKEY="masterKey"
+
 RABBITMQ_CON_URL='amqp://localhost'
 
 MAX_CONCURRENT_TASKS=2
