--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -22,15 +22,17 @@
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.840.0",
 		"@aws-sdk/s3-request-presigner": "^3.842.0",
+		"@core-cast/meilisearch": "workspace:*",
 		"@core-cast/object-store": "workspace:*",
 		"@core-cast/prisma": "workspace:*",
 		"@core-cast/rabbitmq": "workspace:*",
-		"@core-cast/types": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
+		"@core-cast/types": "workspace:*",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"dotenv": "^17.0.0",
 		"express": "^5.1.0",
 		"fluent-ffmpeg": "^2.1.3",
+		"meilisearch": "^0.51.0",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
 		"prom-client": "^15.1.3",
