--- a/compose.yml
+++ b/compose.yml
@@ -47,6 +47,19 @@ services:
     volumes:
       - ./meili-data:/meili_data
 
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant
+    ports:
+      - 6333:6333
+      - 6334:6334
+    expose:
+      - 6333
+      - 6334
+      - 6335
+    volumes:
+      - ./qdrant-data:/qdrant/stor
+
   # OPTIONAL: Explorer for postgreSQL
   adminer:
     image: adminer
