--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -29,6 +29,7 @@
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
+		"@xenova/transformers": "^2.17.2",
 		"dotenv": "^17.0.0",
 		"express": "^5.1.0",
 		"fluent-ffmpeg": "^2.1.3",
