feat(ts)/implement basic embeding generation for video recomendation

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,12 @@
 packages:
-  - 'shared/*'
-  - 'services/*'
-syncInjectedDepsAfterScripts:
-- build
+  - shared/*
+  - services/*
+
 injectWorkspacePackages: true
+
+onlyBuiltDependencies:
+  - protobufjs
+  - sharp
+
+syncInjectedDepsAfterScripts:
+  - build
