--- a/services/transcoding-service/package.json
+++ b/services/transcoding-service/package.json
@@ -28,6 +28,7 @@
 		"@core-cast/rabbitmq": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
+		"@core-cast/qdrant": "workspace:*",
 		"@ffmpeg-installer/ffmpeg": "^1.1.0",
 		"@xenova/transformers": "^2.17.2",
 		"dotenv": "^17.0.0",
