feat(cs)/setup video discovery service

--- a/services/core-service/.env.template
+++ b/services/core-service/.env.template
@@ -10,5 +10,10 @@ OBJECT_STORE_ENDPOINT=http://localhost:9000
 OBJECT_STORE_KEY_ID=minioadmin
 OBJECT_STORE_SECRET=minioadmin123
 
+MEILISEARCH_URL="http://localhost:7700"
+MEILISEARCH_APIKEY="masterKey"
+
+QDRANT_URL="http://localhost:6333"
+
 OBJECT_STORE_PRIVATE_BUCKET=uploads # Used to upload and process videos
 OBJECT_STORE_PUBLIC_BUCKET=cdn # Used to serve videos & screenshots to the end users
