--- a/services/transcoding-service/.env.template
+++ b/services/transcoding-service/.env.template
@@ -16,6 +16,8 @@ OBJECT_STORE_PUBLIC_BUCKET=cdn
 MEILISEARCH_URL="http://localhost:7700"
 MEILISEARCH_APIKEY="masterKey"
 
+QDRANT_URL="http://localhost:6333"
+
 RABBITMQ_CON_URL='amqp://localhost'
 
 MAX_CONCURRENT_TASKS=2
