feat(hs)/implement stalled upload cleanup

--- a/services/housekeeping-service/.env.template
+++ b/services/housekeeping-service/.env.template
@@ -1,5 +1,6 @@
 LOGS_DIR="" # Optional, by default it will store logs in ./logs
-TEMP_DIR="" #Optional, used for ffmpeg results
+
+REDIS_CON_URL=redis://:redis@localhost:9002
 
 POSTGRESQL_CON_URL=postgres://postgres:postgres@localhost:5431/core-cast
 
