feat(hs)/implement stalled processing task recovert

--- a/services/housekeeping-service/package.json
+++ b/services/housekeeping-service/package.json
@@ -24,7 +24,8 @@
 		"@core-cast/redis": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
-		"cron": "^4.3.2",
+		"@core-cast/rabbitmq": "workspace:*",
+ 		"cron": "^4.3.2",
 		"nodemon": "^3.1.10",
 		"pino": "^9.7.0",
 		"rimraf": "^6.0.1",
