feat(hs)/implement basic video interactions batching

--- a/services/housekeeping-service/package.json
+++ b/services/housekeeping-service/package.json
@@ -21,11 +21,12 @@
 		"@aws-sdk/client-s3": "^3.848.0",
 		"@core-cast/object-store": "workspace:*",
 		"@core-cast/prisma": "workspace:*",
+		"@core-cast/rabbitmq": "workspace:*",
 		"@core-cast/redis": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
-		"@core-cast/rabbitmq": "workspace:*",
- 		"cron": "^4.3.2",
+		"cron": "^4.3.2",
+		"ioredis": "^5.6.1",
 		"nodemon": "^3.1.10",
 		"pino": "^9.7.0",
 		"rimraf": "^6.0.1",
