--- a/services/housekeeping-service/package.json
+++ b/services/housekeeping-service/package.json
@@ -25,6 +25,7 @@
 		"@core-cast/redis": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
+		"@core-cast/clickhouse": "workspace:*",
 		"cron": "^4.3.2",
 		"ioredis": "^5.6.1",
 		"nodemon": "^3.1.10",
