--- a/compose.yml
+++ b/compose.yml
@@ -66,7 +66,8 @@ services:
       - '8123:8123'
       - '9004:9000'
     volumes:
-      - ./clickhouse-data:/var/lib/clickhouse
+      # Direct fs volume mappings won't work in windows see (https://github.com/ClickHouse/ClickHouse/issues/55638)
+      - clickhouse-data:/var/lib/clickhouse
     environment:
       - CLICKHOUSE_DB=corecast  
       - CLICKHOUSE_USER=clickhouse
@@ -90,3 +91,6 @@ services:
 
 networks:
   admin:
+
+volumes:
+  clickhouse-data:
