--- a/services/housekeeping-service/package.json
+++ b/services/housekeeping-service/package.json
@@ -14,22 +14,25 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.12.4",
 	"devDependencies": {
+		"@types/express": "^5.0.3",
 		"@types/node": "^24.0.15",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.848.0",
+		"@core-cast/clickhouse": "workspace:*",
 		"@core-cast/object-store": "workspace:*",
 		"@core-cast/prisma": "workspace:*",
 		"@core-cast/rabbitmq": "workspace:*",
 		"@core-cast/redis": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
-		"@core-cast/clickhouse": "workspace:*",
 		"cron": "^4.3.2",
+		"express": "^5.1.0",
 		"ioredis": "^5.6.1",
 		"nodemon": "^3.1.10",
 		"pino": "^9.7.0",
+		"prom-client": "^15.1.3",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2"
 	}
