--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -27,6 +27,7 @@
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/meilisearch": "workspace:*",
 		"@core-cast/qdrant": "workspace:*",
+		"@core-cast/clickhouse": "workspace:*",
 		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.19",
