--- a/services/housekeeping-service/.env.template
+++ b/services/housekeeping-service/.env.template
@@ -14,11 +14,9 @@ OBJECT_STORE_SECRET=minioadmin123
 OBJECT_STORE_PRIVATE_BUCKET=uploads
 OBJECT_STORE_PUBLIC_BUCKET=cdn
 
-CLICKHOUSE_URL="http://localhost"
+CLICKHOUSE_URL="http://localhost:8123"
 CLICKHOUSE_USER="clickhouse"
-CLICKHOUSE_PORT="8123"
 CLICKHOUSE_DATABASE="corecast"
-
 
 RABBITMQ_CON_URL='amqp://localhost'
 
