feat(cs)/video stats retrieval

--- a/services/core-service/.env.template
+++ b/services/core-service/.env.template
@@ -10,6 +10,10 @@ OBJECT_STORE_ENDPOINT=http://localhost:9000
 OBJECT_STORE_KEY_ID=minioadmin
 OBJECT_STORE_SECRET=minioadmin123
 
+CLICKHOUSE_URL="http://localhost:8123"
+CLICKHOUSE_USER="clickhouse"
+CLICKHOUSE_DATABASE="corecast"
+
 MEILISEARCH_URL="http://localhost:7700"
 MEILISEARCH_APIKEY="masterKey"
 
