--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -20,14 +20,15 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.844.0",
+		"@clickhouse/client": "^1.11.2",
+		"@core-cast/clickhouse": "workspace:*",
+		"@core-cast/meilisearch": "workspace:*",
 		"@core-cast/object-store": "workspace:*",
 		"@core-cast/prisma": "workspace:*",
-		"@core-cast/types": "workspace:*",
+		"@core-cast/qdrant": "workspace:*",
 		"@core-cast/redis": "workspace:*",
 		"@core-cast/repositories": "workspace:*",
-		"@core-cast/meilisearch": "workspace:*",
-		"@core-cast/qdrant": "workspace:*",
-		"@core-cast/clickhouse": "workspace:*",
+		"@core-cast/types": "workspace:*",
 		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.9",
 		"@types/cors": "^2.8.19",
