--- a/shared/repositories/tsconfig.json
+++ b/shared/repositories/tsconfig.json
@@ -5,7 +5,8 @@
 		"declaration": true,
 		"module": "CommonJS",
 		"target": "ES2020",
-		"strict": true
+		"strict": true,
+		"esModuleInterop": true
 	},
 	"include": ["./"]
 }
