--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -38,6 +38,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
+		"express-rate-limit": "^8.0.1",
 		"ioredis": "^5.6.1",
 		"multer": "^2.0.1",
 		"otplib": "^12.0.1",
