--- a/shared/clickhouse/package.json
+++ b/shared/clickhouse/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@clickhouse/client": "^1.11.2",
-		"@types/node": "^24.0.15"
+		"@types/node": "^24.0.15",
+		"typescript": "^5.8.3"
 	}
 }
