--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,59 @@
 minio-data
 pg-data
 redis-data
+meili-data
+qdrant-data
 
 node_modules
+*/node_modules
+**/node_modules
+
+dist
+*/dist
+**/dist
+.next
+*/build
+**/build
+
+*.log
+npm-debug.log*
+pnpm-debug.log*
+
+pids
+*.pid
+*.seed
+*.pid.lock
+
+
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+.vscode
+.idea
+*.swp
+*.swo
+
 .git
 .gitignore
-*.md
-dist
+
+Dockerfile*
+docker-compose*
+.dockerignore
+
+tmp
+temp
+*.tmp
+*.temp
+
+.cache
+*/.cache
+**/.cache
+.turbo
+*/.turbo
+**/.turbo
