--- a/services/housekeeping-service/package.json
+++ b/services/housekeeping-service/package.json
@@ -28,10 +28,12 @@
 		"@core-cast/repositories": "workspace:*",
 		"@core-cast/types": "workspace:*",
 		"cron": "^4.3.2",
+		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
 		"ioredis": "^5.6.1",
 		"nodemon": "^3.1.10",
 		"pino": "^9.7.0",
+		"pino-pretty": "^13.0.0",
 		"prom-client": "^15.1.3",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2"
