--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -16,6 +16,9 @@ services:
   traefik:
     image: traefik:v3.5
     container_name: traefik
+    depends_on:
+      - core
+      - upload
     command:
       - --api.dashboard=true
       - --providers.docker=true
@@ -36,7 +39,7 @@ services:
       context: .
       target: core-service
     ports:
-      - 3000:8080 # API (Exposed by proxy to the exterior)
+      - 3001:8080 # API (Exposed by proxy to the exterior)
       - 4000:8081 # Prometheus
     env_file:
       - .env.docker
@@ -58,7 +61,7 @@ services:
       context: .
       target: upload-service
     ports:
-      - 3001:8080 # API (Exposed by proxy to the exterior)
+      - 3002:8080 # API (Exposed by proxy to the exterior)
       - 4001:8081 # Prometheus
     env_file:
       - .env.docker
