--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -25,6 +25,8 @@ services:
       - --api.insecure=true
       - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
+      - --serversTransport.insecureSkipVerify=true
+      - --log.level=DEBUG  # Temporarily for debugging
     ports:
       - '80:80' # Main backend entrypoint expose to end users
       - '8088:8080' # Dashboard do NOT expose to end users
