feat(us)/add object store public endpoint variable

--- a/.env.docker
+++ b/.env.docker
@@ -12,6 +12,8 @@ OBJECT_STORE_ENDPOINT=http://minio:9000
 OBJECT_STORE_KEY_ID=minioadmin
 OBJECT_STORE_SECRET=minioadmin123
 
+OBJECT_STORE_PUBLIC_BASE_PATH="http://localhost:9000" # Public object store base path
+
 OBJECT_STORE_PRIVATE_BUCKET=uploads # Used to upload and process videos
 OBJECT_STORE_PUBLIC_BUCKET=cdn # Used to serve videos & screenshots to the end users
 
