--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@core-cast/types": "workspace:*",
 		"@hookform/resolvers": "^5.1.1",
+		"@radix-ui/react-alert-dialog": "^1.1.14",
 		"@radix-ui/react-aspect-ratio": "^1.1.7",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
