--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,14 @@
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@tanstack/react-query": "^5.83.0",
 		"@tanstack/react-table": "^8.21.3",
+		"@types/qrcode": "^1.5.5",
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.525.0",
 		"next": "15.4.3",
+		"qrcode": "^1.5.4",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.61.1",
