--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"@tanstack/react-query": "^5.83.0",
 		"@tanstack/react-table": "^8.21.3",
 		"@types/qrcode": "^1.5.5",
+		"@videojs/http-streaming": "^3.15.0",
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -39,6 +40,7 @@
 		"react-hook-form": "^7.61.1",
 		"sonner": "^2.0.6",
 		"tailwind-merge": "^3.3.1",
+		"video.js": "^8.23.3",
 		"zod": "^4.0.10"
 	},
 	"devDependencies": {
