--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,13 @@
 		"@tanstack/react-query": "^5.83.0",
 		"@tanstack/react-table": "^8.21.3",
 		"@types/qrcode": "^1.5.5",
-		"@videojs/http-streaming": "^3.15.0",
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"hls.js": "^1.6.7",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.525.0",
+		"media-chrome": "^4.12.0",
 		"next": "15.4.3",
 		"qrcode": "^1.5.4",
 		"react": "19.1.0",
@@ -40,7 +41,6 @@
 		"react-hook-form": "^7.61.1",
 		"sonner": "^2.0.6",
 		"tailwind-merge": "^3.3.1",
-		"video.js": "^8.23.3",
 		"zod": "^4.0.10"
 	},
 	"devDependencies": {
