--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cookies-next": "^6.1.0",
 		"hls.js": "^1.6.7",
 		"input-otp": "^1.4.2",
 		"lucide-react": "^0.525.0",
