--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.61.1",
+		"recharts": "2.15.4",
 		"sonner": "^2.0.6",
 		"tailwind-merge": "^3.3.1",
 		"zod": "^4.0.10"
@@ -55,5 +56,8 @@
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5"
+	},
+	"overrides": {
+		"react-is": "^19.0.0-rc-69d4b800-20241021"
 	}
 }
