--- a/services/upload-service/.env.template
+++ b/services/upload-service/.env.template
@@ -13,6 +13,8 @@ OBJECT_STORE_SECRET=minioadmin123
 OBJECT_STORE_PRIVATE_BUCKET=uploads # Used to upload and process videos
 OBJECT_STORE_PUBLIC_BUCKET=cdn # Used to serve videos & screenshots to the end users
 
+PROMETHEUS_SERVER_PORT=8081
+
 CLIENT_BASE_URL="http://localhost"
 
 RABBITMQ_CON_URL='amqp://localhost'
