fix/minor issues for deployment test

--- a/.env.docker
+++ b/.env.docker
@@ -26,5 +26,6 @@ CLICKHOUSE_URL="http://clickhouse:8123"
 CLICKHOUSE_USER="clickhouse"
 CLICKHOUSE_DATABASE="corecast"
 
+NODE_ENV="dev"
 
 CLIENT_BASE_URL="http://localhost:3000"
