--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -33,24 +33,24 @@ services:
       - main-net
 
   # Corecast frontend
-  frontend:
-    build:
-      context: .
-      target: frontend
-    depends_on:
-      - core
-    environment:
-      - SERVER_SIDE_API=http://traefik:80/api #Used by server components
-    ports:
-      - '3000:3000'
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.frontend.rule=PathPrefix(`/`) && !PathPrefix(`/api`)'
-      - 'traefik.http.routers.frontend.entrypoints=web'
-      - 'traefik.http.routers.frontend.priority=10'
-      - 'traefik.http.services.frontend.loadbalancer.server.port=3000'
-    networks:
-      - main-net
+  # frontend:
+  #   build:
+  #     context: .
+  #     target: frontend
+  #   depends_on:
+  #     - core
+  #   environment:
+  #     - SERVER_SIDE_API=http://traefik:80/api #Used by server components
+  #   ports:
+  #     - '3000:3000'
+  #   labels:
+  #     - 'traefik.enable=true'
+  #     - 'traefik.http.routers.frontend.rule=PathPrefix(`/`) && !PathPrefix(`/api`)'
+  #     - 'traefik.http.routers.frontend.entrypoints=web'
+  #     - 'traefik.http.routers.frontend.priority=10'
+  #     - 'traefik.http.services.frontend.loadbalancer.server.port=3000'
+  #   networks:
+  #     - main-net
 
   # Corecast services
   core:
@@ -149,9 +149,9 @@ services:
   # MQ
   rabbitmq:
     image: rabbitmq:4-management
-    ports:
-      - 5672:5672 # Do NOT expose without authenticatiuon properly configured
-      - 9091:15672 # Do NOT expose to end users
+    # ports:
+    # - 5672:5672 # Do NOT expose without authenticatiuon properly configured
+    # - 9091:15672 # Do NOT expose to end users
     healthcheck:
       test: ['CMD', 'rabbitmq-diagnostics', 'status']
       interval: 10s
@@ -272,7 +272,7 @@ services:
     image: prom/prometheus
     ports:
       - '9090:9090'
-    command: "echo "
+    command: 'echo '
     volumes:
       - ./prometheus-config:/etc/prometheus
       - prometheus-data:/prometheus
