--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -272,9 +272,16 @@ services:
     image: prom/prometheus
     ports:
       - '9090:9090'
-    command: 'echo '
     volumes:
       - ./prometheus-config:/etc/prometheus
       - prometheus-data:/prometheus
     networks:
       - main-net
+
+  # grafana:
+  #   image: grafana/grafana-enterprise
+  #   container_name: grafana
+  #   ports:
+  #     - '4040:3000'
+  #   networks:
+  #     - main-net
